--- a/School_Bus/Views/CreateRideView.xaml
+++ b/School_Bus/Views/CreateRideView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="School_Bus.Views.ParentView"
+﻿<UserControl x:Class="School_Bus.Views.CreateRideView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:School_Bus.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Grid Background="LightSkyBlue">
             
     </Grid>
 </UserControl>
