--- a/School_Bus/Views/DriverView.xaml
+++ b/School_Bus/Views/DriverView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="School_Bus.Views.StudentView"
+﻿<UserControl x:Class="School_Bus.Views.DriverView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -23,7 +23,7 @@
                     VerticalAlignment="Top"
                     Grid.Column="0">
                 <fa:IconImage Icon="Search" Height="20" Width="20" Foreground="Orange"/>
-                <TextBox  
+                <TextBox    
                 FontSize="13"
                      Height="24"
                        Width="300"
@@ -43,13 +43,13 @@
                 Style="{StaticResource parentButton}">
             </Button>
             <Button Grid.Column="2"
-                Content="Add Student"
+                Content="Add Driver"
                 Command="{Binding LoginCommand}"
                 Style="{StaticResource parentButton}">
 
             </Button>
             <Button Grid.Column="3"
-                Content="Remove Student"
+                Content="Remove Driver"
                 Command="{Binding LoginCommand}"
                 Style="{StaticResource parentButton}">
             </Button>
@@ -75,10 +75,8 @@
                     <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="ID" HeaderStringFormat=""/>
                     <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="First name"/>
                     <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Last name"/>
-                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Class ID"/>
-                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Parent ID"/>
-                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Bus ID"/>
-                    
+                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Phone"/>
+                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Address"/>
 
                 </DataGrid.Columns>
             </DataGrid>
