--- a/School_Bus/Views/CreateRideView.xaml
+++ b/School_Bus/Views/CreateRideView.xaml
@@ -18,31 +18,31 @@
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Vertical" Grid.Column="0" Margin="0 60 0 0">
             <StackPanel Margin="0 15 0 0">
-                <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}">Bus ID</TextBlock>
-                <TextBox Width="200" Background="White" Margin="0 10 0 0"></TextBox>
+                <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}" Foreground="Brown">Bus ID</TextBlock>
+                <TextBox Style="{StaticResource MaterialDesignTextBox}" Width="200"  Margin="0 10 0 0"></TextBox>
             </StackPanel>
             <StackPanel Margin="0 15 0 0">
-                <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}">Driver ID</TextBlock>
-                <TextBox Width="200" Background="White" Margin="0 10 0 0"></TextBox>
+                <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}" Foreground="Brown">Driver ID</TextBlock>
+                <TextBox Style="{StaticResource MaterialDesignTextBox}"  Width="200"  Margin="0 10 0 0"></TextBox>
             </StackPanel>
             <StackPanel Margin="0 15 0 0">
-                <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}">Start Point</TextBlock>
-                <TextBox Width="200" Background="White" Margin="0 10 0 0"></TextBox>
+                <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}" Foreground="Brown">Start Point</TextBlock>
+                <TextBox Style="{StaticResource MaterialDesignTextBox}"  Width="200"  Margin="0 10 0 0"></TextBox>
             </StackPanel>
             <StackPanel Margin="0 15 0 0">
-                <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}">End Point</TextBlock>
-                <TextBox Width="200" Background="White" Margin="0 10 0 0"></TextBox>
+                <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}" Foreground="Brown">End Point</TextBlock>
+                <TextBox Style="{StaticResource MaterialDesignTextBox}"  Width="200"  Margin="0 10 0 0"></TextBox>
             </StackPanel>
         </StackPanel>
 
         <StackPanel Orientation="Vertical" Grid.Column="1" Margin="0 60 0 0">
             <StackPanel Margin="0 15 0 0">
-                <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}">Passangers</TextBlock>
-                <TextBox Width="200" Background="White" Margin="0 10 0 0"></TextBox>
+                <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}" Foreground="Brown">Passangers</TextBlock>
+                <TextBox Style="{StaticResource MaterialDesignTextBox}"  Width="200"  Margin="0 10 0 0"></TextBox>
             </StackPanel>
             <StackPanel Margin="0 15 0 0">
-                <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}">Finish Time</TextBlock>
-                <TextBox Width="200" Background="White" Margin="0 10 0 0"></TextBox>
+                <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}" Foreground="Brown">Finish Time</TextBlock>
+                <TextBox Style="{StaticResource MaterialDesignTextBox}"  Width="200"  Margin="0 10 0 0"></TextBox>
                 <Button Grid.Row="0" 
                         Grid.Column="1"
                         Margin="0 20 0 0"
