--- a/School_Bus/Views/ClassAddView.xaml
+++ b/School_Bus/Views/ClassAddView.xaml
@@ -9,7 +9,8 @@
       d:DesignHeight="300" d:DesignWidth="400"
       Title="ClassAddView">
 
-    <Grid Background="LightYellow">
+    <Grid Background="Coral">
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="5*"></RowDefinition>
@@ -28,14 +29,17 @@
         <StackPanel Grid.Row="1">
             <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}"
                        Text="Class Name"
-                       Foreground="Brown"
+                       Foreground="LightYellow"
                        Margin="20 0 0 0"></TextBlock>
-            <TextBox Style="{StaticResource MaterialDesignTextBox}"
+            <TextBox Style="{StaticResource MaterialDesignFilledTextBox}" Foreground="White"
+                     FontSize="18"
                      Width="360"
                      HorizontalAlignment="Left"
-                     Margin="20 0 0 0"></TextBox>
+                     Margin="20 0 0 0"></TextBox
+                     >
             <Button Style="{StaticResource parentButton}"
                     x:Name="btnAdd"
+                    Foreground="White"
                     Width="100"
                     Margin="0 20 0 0"
                     Content="Add"
