--- a/School_Bus/Views/ClassView.xaml
+++ b/School_Bus/Views/ClassView.xaml
@@ -8,22 +8,22 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-    <Grid.RowDefinitions>
-        <RowDefinition Height="50"/>
-        <RowDefinition/>
-    </Grid.RowDefinitions>
-    <Grid Grid.Row="0">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="120"/>
-            <ColumnDefinition Width="120"/>
-            <ColumnDefinition Width="120"/>
-        </Grid.ColumnDefinitions>
-        <StackPanel Orientation="Horizontal"
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="120"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Horizontal"
                     VerticalAlignment="Top"
                     Grid.Column="0">
-            <fa:IconImage Icon="Search" Height="20" Width="20" Foreground="Orange"/>
-            <TextBox    
+                <fa:IconImage Icon="Search" Height="20" Width="20" Foreground="Orange"/>
+                <TextBox    
                 FontSize="13"
                      Height="24"
                        Width="300"
@@ -36,49 +36,49 @@
                          BorderThickness="0,0,0,1"                             
                          VerticalContentAlignment="Center"
                          Margin="5,5,0,0"></TextBox>
-        </StackPanel>
-        <Button Grid.Column="1"
+            </StackPanel>
+            <Button Grid.Column="1"
                 Content="Search"
                 Command="{Binding LoginCommand}"
-                Style="{StaticResource parentButton}">      
-        </Button>
-        <Button Name="btn_AddClass"
+                Style="{StaticResource parentButton}">
+            </Button>
+            <Button Name="btn_AddClass"
                 Grid.Column="2"
                 Content="Add Class"
-                Command="{Binding LoginCommand}"
+                Click="btn_AddClass_Click"
                 Style="{StaticResource parentButton}"
                >
 
-        </Button>
-        <Button Grid.Column="3"
+            </Button>
+            <Button Grid.Column="3"
                 Content="Remove Class"
                 Command="{Binding LoginCommand}"
-                Style="{StaticResource parentButton}">  
-        </Button>
+                Style="{StaticResource parentButton}">
+            </Button>
 
-    </Grid>
-    <Border Grid.Row="1"
+        </Grid>
+        <Border Grid.Row="1"
             Background="LightYellow"
             CornerRadius="10" 
             Padding="10">
-        <DataGrid ColumnWidth="*"
+            <DataGrid ColumnWidth="*"
               Background="Transparent"
               BorderThickness="0">
-            <DataGrid.ColumnHeaderStyle>
-                <Style TargetType="DataGridColumnHeader">
-                    <Setter Property="Background" Value="Transparent"/>
-                    <Setter Property="Foreground" Value="Purple"/>
-                    <Setter Property="Padding" Value="10,0,0,10"/>
-                    <Setter Property="FontFamily" Value="Montserrat"/>
-                    <Setter Property="FontSize" Value="15"/>
-                </Style>
-            </DataGrid.ColumnHeaderStyle>
-            <DataGrid.Columns>
-                <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="ID" HeaderStringFormat=""/>
-                <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Class Name"/>
+                <DataGrid.ColumnHeaderStyle>
+                    <Style TargetType="DataGridColumnHeader">
+                        <Setter Property="Background" Value="Transparent"/>
+                        <Setter Property="Foreground" Value="Purple"/>
+                        <Setter Property="Padding" Value="10,0,0,10"/>
+                        <Setter Property="FontFamily" Value="Montserrat"/>
+                        <Setter Property="FontSize" Value="15"/>
+                    </Style>
+                </DataGrid.ColumnHeaderStyle>
+                <DataGrid.Columns>
+                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="ID" HeaderStringFormat=""/>
+                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Class Name"/>
 
                 </DataGrid.Columns>
-        </DataGrid>
-    </Border>
-</Grid>
+            </DataGrid>
+        </Border>
+    </Grid>
 </UserControl>
