--- a/School_Bus/Views/ClassView.xaml
+++ b/School_Bus/Views/ClassView.xaml
@@ -52,7 +52,7 @@
             </Button>
             <Button Grid.Column="3"
                 Content="Remove Class"
-                Command="{Binding LoginCommand}"
+                Click="Button_Click"
                 Style="{StaticResource parentButton}">
             </Button>
 
