--- a/School_Bus/App.xaml
+++ b/School_Bus/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:School_Bus"
-             StartupUri="Views\MainView.xaml">
+             StartupUri="Views\SplashView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
