--- a/School_Bus/Views/LoginView.xaml
+++ b/School_Bus/Views/LoginView.xaml
@@ -31,7 +31,7 @@
                 <TextBlock FontSize="17" FontWeight="SemiBold" HorizontalAlignment="Center" Text="Log in to your existing account"></TextBlock>
                 <TextBox Margin="0 50 0 0" x:Name="txt_username" Width="300" FontSize="18" materialDesign:HintAssist.Hint="Enter Username" BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedTextBox}"></TextBox>
                 <PasswordBox Margin="0 20 0 0" x:Name="txt_password" Width="300" FontSize="18"  materialDesign:HintAssist.Hint="Enter Password" BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedPasswordBox}"></PasswordBox>
-                <Button Margin="0 20 0 0" x:Name="btn_login" Style="{StaticResource MaterialDesignFlatMidBgButton}" materialDesign:ShadowAssist.ShadowDepth="Depth0" Height="53" Width="300" materialDesign:ButtonAssist.CornerRadius="10" FontSize="18" Content="LOG IN"></Button>
+                <Button Margin="0 20 0 0" x:Name="btn_login" Style="{StaticResource MaterialDesignFlatMidBgButton}" materialDesign:ShadowAssist.ShadowDepth="Depth0" Height="53" Width="300" materialDesign:ButtonAssist.CornerRadius="10" FontSize="18" Content="LOG IN" Click="btn_login_Click"></Button>
                 <Button Margin="0 20 0 0" x:Name="btn_signup" Style="{StaticResource MaterialDesignFlatButton}" materialDesign:ShadowAssist.ShadowDepth="Depth0" Height="53" Width="300" materialDesign:ButtonAssist.CornerRadius="10" FontSize="18" Content="Create Account" ></Button>
             </StackPanel>
         </materialDesign:DialogHost>
