--- a/School_Bus/Views/Parent/ParentChildView.xaml
+++ b/School_Bus/Views/Parent/ParentChildView.xaml
@@ -44,13 +44,15 @@
             </Button>
             <Button Grid.Column="2"
                     Content="Add Parent"
-                    Command="{Binding LoginCommand}"
+                    Name="Add_Parent"
+                    Click="Add_Parent_Click"
                     Style="{StaticResource parentButton}">
 
             </Button>
             <Button Grid.Column="3"
                     Content="Remove Parent"
-                    Command="{Binding LoginCommand}"
+                    Name="Remove_Parent"
+                    Click="Remove_Parent_Click"
                     Style="{StaticResource parentButton}">  
             </Button>
 
