--- a/School_Bus/Views/Car/CarView.xaml
+++ b/School_Bus/Views/Car/CarView.xaml
@@ -44,13 +44,15 @@
             </Button>
             <Button Grid.Column="2"
                 Content="Add Car"
-                Command="{Binding LoginCommand}"
+                Name="Add_Car"
+                Click="Add_Car_Click"
                 Style="{StaticResource parentButton}">
 
             </Button>
             <Button Grid.Column="3"
                 Content="Remove Car"
-                Command="{Binding LoginCommand}"
+                Name="Remove_Car"
+                Click="Remove_Car_Click"
                 Style="{StaticResource parentButton}">
             </Button>
 
