--- a/School_Bus/Views/Driver/DriverView.xaml
+++ b/School_Bus/Views/Driver/DriverView.xaml
@@ -44,13 +44,15 @@
             </Button>
             <Button Grid.Column="2"
                 Content="Add Driver"
-                Command="{Binding LoginCommand}"
+                Name="Add_Driver"
+                Click="Add_Driver_Click"
                 Style="{StaticResource parentButton}">
 
             </Button>
             <Button Grid.Column="3"
-                Content="Remove Driver"
-                Command="{Binding LoginCommand}"
+                    Name="Remove_Driver"
+                    Content="Remove Driver"
+                    Click="Remove_Driver_Click"
                 Style="{StaticResource parentButton}">
             </Button>
 
