--- a/School_Bus/Views/Student/StudentView.xaml
+++ b/School_Bus/Views/Student/StudentView.xaml
@@ -44,13 +44,15 @@
             </Button>
             <Button Grid.Column="2"
                 Content="Add Student"
-                Command="{Binding LoginCommand}"
+                Name="Add_Student"
+                Click="Add_Student_Click"
                 Style="{StaticResource parentButton}">
 
             </Button>
             <Button Grid.Column="3"
                 Content="Remove Student"
-                Command="{Binding LoginCommand}"
+                Name="Student_Remove"
+                Click="Student_Remove_Click"
                 Style="{StaticResource parentButton}">
             </Button>
 
