--- a/School_Bus/Views/LoginView.xaml
+++ b/School_Bus/Views/LoginView.xaml
@@ -34,7 +34,7 @@
                 <Button Margin="0 20 0 0" x:Name="btn_login" Style="{StaticResource MaterialDesignFlatMidBgButton}" materialDesign:ShadowAssist.ShadowDepth="Depth0" Height="53" Width="300" materialDesign:ButtonAssist.CornerRadius="10" FontSize="18" Content="LOG IN" Click="btn_login_Click"></Button>
                 <Button Margin="0 20 0 0" x:Name="btn_signup" Style="{StaticResource MaterialDesignFlatButton}" materialDesign:ShadowAssist.ShadowDepth="Depth0" Height="53" Width="300" materialDesign:ButtonAssist.CornerRadius="10" FontSize="18" Content="Create Account" Click="btn_signup_Click"></Button>
                 <materialDesign:Snackbar x:Name="SnackBar" Margin="5" Height="60">
-                    <materialDesign:SnackbarMessage HorizontalContentAlignment="Center"
+                    <materialDesign:SnackbarMessage Name="snackmessage" HorizontalContentAlignment="Center"
     Content="Signed Up!" />
                 </materialDesign:Snackbar>
             </StackPanel>
