--- a/School_Bus/Views/Class/ClassView.xaml
+++ b/School_Bus/Views/Class/ClassView.xaml
@@ -4,9 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
-             xmlns:local="clr-namespace:School_Bus.Views"
+             xmlns:local="clr-namespace:School_Bus.Views" xmlns:viewmodel="clr-namespace:School_Bus.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <viewmodel:ClassViewModel/>
+    </UserControl.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -45,14 +48,14 @@
             <Button Name="btn_AddClass"
                 Grid.Column="2"
                 Content="Add Class"
-                Click="btn_AddClass_Click"
+                Command="{Binding ShowAddClassViewCommand}"
                 Style="{StaticResource parentButton}"
                >
 
             </Button>
             <Button Grid.Column="3"
                 Content="Remove Class"
-                Click="Button_Click"
+                Command="{Binding ShowRemoveClassViewCommand}"
                 Style="{StaticResource parentButton}">
             </Button>
 
