--- a/School_Bus/Views/Parent/ParentChildView.xaml
+++ b/School_Bus/Views/Parent/ParentChildView.xaml
@@ -4,9 +4,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
-             xmlns:local="clr-namespace:School_Bus.Views"
+             xmlns:local="clr-namespace:School_Bus.Views" xmlns:viewmodel="clr-namespace:School_Bus.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.DataContext>
+        <viewmodel:ParentViewModel/>
+    </UserControl.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -45,14 +49,14 @@
             <Button Grid.Column="2"
                     Content="Add Parent"
                     Name="Add_Parent"
-                    Click="Add_Parent_Click"
+                    Command="{Binding ShowAddParentViewCommand}"
                     Style="{StaticResource parentButton}">
 
             </Button>
             <Button Grid.Column="3"
                     Content="Remove Parent"
                     Name="Remove_Parent"
-                    Click="Remove_Parent_Click"
+                    Command="{Binding ShowRemoveParentViewCommand}"
                     Style="{StaticResource parentButton}">  
             </Button>
 
