--- a/School_Bus/Views/LoginView.xaml
+++ b/School_Bus/Views/LoginView.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:local="clr-namespace:School_Bus.Views"
+        xmlns:local="clr-namespace:School_Bus.Views" 
+        xmlns:viewmodel="clr-namespace:School_Bus.ViewModels"
         mc:Ignorable="d"
         Title="LoginView" Height="750" Width="450"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
@@ -12,6 +13,11 @@
         AllowsTransparency="True"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen">
+
+    <Window.DataContext>
+        <viewmodel:LoginViewModel/>
+    </Window.DataContext>
+    
     <materialDesign:Card UniformCornerRadius="15" Background="{DynamicResource MaterialDesignPaper}" Margin="25" materialDesign:ShadowAssist.ShadowDepth="Depth4">
         <materialDesign:DialogHost CloseOnClickAway="True" x:Name="DialogHost">
             <StackPanel>
