--- a/School_Bus/Views/LoginView.xaml
+++ b/School_Bus/Views/LoginView.xaml
@@ -25,23 +25,22 @@
                     <StackPanel>
                         <StackPanel Margin="16 10 0 6" Orientation="Horizontal" HorizontalAlignment="Center">
                             <TextBlock VerticalAlignment="Center" Text="Dark Mode"></TextBlock>
-                            <ToggleButton Cursor="Hand" ToolTip="Enable Dark Mode" Margin="12 0 8 0" x:Name="theme_toggle" IsChecked="{Binding IsDarkTheme}" Click="toggleTheme"></ToggleButton>
+                            <ToggleButton Cursor="Hand" ToolTip="Enable Dark Mode" Margin="12 0 8 0" x:Name="theme_toggle" IsChecked="{Binding IsDarkTheme}" Command="{Binding ToggleTheme}"></ToggleButton>
                         </StackPanel>
                         <Button ToolTip="Having Trouble Logging In?" Margin="0 8 0 0" Content="Help Me"></Button>
-                        <Button x:Name="btn_exit" ToolTip="Close Application" Content="Exit Application" Click="exitApp"></Button>
+                        <Button x:Name="btn_exit" ToolTip="Close Application" Content="Exit Application" Command="{Binding ExitApp}"></Button>
                     </StackPanel>
                 </materialDesign:PopupBox>
 
                 <Image Source="\Images\Logo.png" Margin="0 60 0 5" Height="100"></Image>
                 <TextBlock Margin="0 25 0 5" HorizontalAlignment="Center" FontSize="28" FontWeight="Bold" Text="Welcome Back!"></TextBlock>
                 <TextBlock FontSize="17" FontWeight="SemiBold" HorizontalAlignment="Center" Text="Log in to your existing account"></TextBlock>
-                <TextBox Margin="0 50 0 0" x:Name="txt_username" Width="300" FontSize="18" materialDesign:HintAssist.Hint="Enter Username" BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedTextBox}"></TextBox>
-                <PasswordBox Margin="0 20 0 0" x:Name="txt_password" Width="300" FontSize="18"  materialDesign:HintAssist.Hint="Enter Password" BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedPasswordBox}"></PasswordBox>
-                <Button Margin="0 20 0 0" x:Name="btn_login" Style="{StaticResource MaterialDesignFlatMidBgButton}" materialDesign:ShadowAssist.ShadowDepth="Depth0" Height="53" Width="300" materialDesign:ButtonAssist.CornerRadius="10" FontSize="18" Content="LOG IN" Click="btn_login_Click"></Button>
-                <Button Margin="0 20 0 0" x:Name="btn_signup" Style="{StaticResource MaterialDesignFlatButton}" materialDesign:ShadowAssist.ShadowDepth="Depth0" Height="53" Width="300" materialDesign:ButtonAssist.CornerRadius="10" FontSize="18" Content="Create Account" Click="btn_signup_Click"></Button>
-                <materialDesign:Snackbar x:Name="SnackBar" Margin="5" Height="60">
-                    <materialDesign:SnackbarMessage Name="snackmessage" HorizontalContentAlignment="Center"
-    Content="Signed Up!" />
+                <TextBox Margin="0 50 0 0" x:Name="txt_username" Width="300" FontSize="18" materialDesign:HintAssist.Hint="Enter Username" BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedTextBox}" Text="{Binding Username, Mode=TwoWay}"></TextBox>
+                <TextBox Margin="0 20 0 0" x:Name="txt_password" Width="300" FontSize="18" materialDesign:HintAssist.Hint="Enter Password" BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedTextBox}" Text="{Binding Password, Mode=TwoWay}"></TextBox>
+                <Button Margin="0 20 0 0" x:Name="btn_login" Style="{StaticResource MaterialDesignFlatMidBgButton}" materialDesign:ShadowAssist.ShadowDepth="Depth0" Height="53" Width="300" materialDesign:ButtonAssist.CornerRadius="10" FontSize="18" Content="LOG IN" Command="{Binding LoginCommand}"></Button>
+                <Button Margin="0 20 0 0" x:Name="btn_signup" Style="{StaticResource MaterialDesignFlatButton}" materialDesign:ShadowAssist.ShadowDepth="Depth0" Height="53" Width="300" materialDesign:ButtonAssist.CornerRadius="10" FontSize="18" Content="Create Account" Command="{Binding SignUpCommand}"></Button>
+                <materialDesign:Snackbar x:Name="SnackBar" Margin="5" Height="60" IsActive="{Binding IsSnackBarVisible}">
+                    <materialDesign:SnackbarMessage Name="snackmessage" HorizontalContentAlignment="Center" Content="{Binding SnackBarMessage}"  />
                 </materialDesign:Snackbar>
             </StackPanel>
         </materialDesign:DialogHost>
