--- a/School_Bus/Views/MainView.xaml
+++ b/School_Bus/Views/MainView.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
-        xmlns:local="clr-namespace:School_Bus.Views" xmlns:viewModel="clr-namespace:School_Bus.ViewModels"
+        xmlns:local="clr-namespace:School_Bus.Views" 
+        xmlns:viewModel="clr-namespace:School_Bus.ViewModels"
         mc:Ignorable="d"
         Title="MainView" Height="600" Width="900"
         WindowStartupLocation="CenterScreen"
