--- a/School_Bus/Views/Driver/DriverView.xaml
+++ b/School_Bus/Views/Driver/DriverView.xaml
@@ -67,8 +67,9 @@
             CornerRadius="10" 
             Padding="10">
             <DataGrid ColumnWidth="*"
-              Background="Transparent"
-              BorderThickness="0">
+                      Background="Transparent"
+                      BorderThickness="0"
+                      ItemsSource="{Binding DriverList}">
                 <DataGrid.ColumnHeaderStyle>
                     <Style TargetType="DataGridColumnHeader">
                         <Setter Property="Background" Value="Transparent"/>
@@ -78,14 +79,6 @@
                         <Setter Property="FontSize" Value="15"/>
                     </Style>
                 </DataGrid.ColumnHeaderStyle>
-                <DataGrid.Columns>
-                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="ID" HeaderStringFormat=""/>
-                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="First name"/>
-                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Last name"/>
-                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Phone"/>
-                    <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Address"/>
-
-                </DataGrid.Columns>
             </DataGrid>
         </Border>
     </Grid>
